# matrix-codex-flow

./: .gitmodules  README.md  angular.json  package-lock.json  package.json  tailwind.config.js
.codex/: agents.md  context.md  ui-style.md
.github/workflow/: build.yml
.github/workflows/: build.yml  main.yml  release.yml
public/css/: drag.css  loader.css  markdown.css  titlebar.css
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  lib.rs  main.rs
src-tauri/src/commands/: chat_commands.rs  command_commands.rs  mod.rs  project_commands.rs  settings_commands.rs  system_commands.rs
src-tauri/src/models/: agent_rule.rs  app_config.rs  chat.rs  event_handler.rs  mod.rs  project.rs  setting.rs  task.rs
src-tauri/src/services/: app_service.rs  codex_service.rs  command_service.rs  data_service.rs  mod.rs
src/app/: app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts
src/app/models/: agent.codex.provider.ts  agent.provider.ts  agent.rule.ts  agents.ts  chat.message.ts  command.ts  dialog.model.ts  id.ts  markdown.tool.ts  nav.model.ts  notification.ts  project.extensions.ts  project.ts  setting.model.ts  status.message.ts  svg.ts  task.ts
src/app/pipes/: disable.context.directive.ts  format.timestamp.pipe.ts
src/app/services/: app.service.ts  chat.service.ts  command.service.ts  context.service.ts  dialog.service.ts  folder-picker.service.ts  local.service.ts  message.store.service.ts  nav.service.ts  (+7 more)
(+99 files in other folders)
