[package]
name = "VibeFlow"
version = "0.1.0"
description = "VibeFlow is a knowledge graph-based agent framework that enables users to create, manage, and interact with intelligent agents. It provides a visual interface for designing agent workflows, defining rules, and monitoring agent performance. With VibeFlow, users can easily build and deploy AI agents that can perform complex tasks and make informed decisions based on data and user interactions."
authors = ["Andy Lang"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vibeflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = [".", "crates/codex-sdk-rs"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-dialog = "2.6"
env_logger = "0.11"
rusqlite = { version = "0.38", features = ["bundled"] }
futures = "0.3"
codex-sdk = { path = "crates/codex-sdk-rs" }
